<resources>
    <string name="app_name">Joesoft Consulting</string>
    <string name="email_registration">Email Registration</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="phone_hint">Phone</string>
    <string name="confirm_password_hint">Confirm Password</string>

    <string name="issues_fragment">Issues</string>
    <string name="projects_fragment">Projects</string>

    <string name="project_name_hint">Project name</string>
    <string name="description_hint">Description</string>
    <string name="assign_to_project_hint">Assign to project</string>
    <string name="summary_hint">Summary</string>
    <string name="date_created_hint">Date created</string>

    <!--db-nodes-->
    <string name="node_users">users</string>
    <string name="node_chatrooms">chatrooms</string>

    <!--db-users fields-->
    <string name="field_name">name</string>
    <string name="field_phone">phone</string>
    <string name="field_profile_image">profile_image</string>
    <string name="field_security_level">security_level</string>
    <string name="field_user_id">user_id</string>

    <!-- collections-->
    <string name="collection_projects">projects</string>
    <string name="collection_issues">issues</string>

    <string name="intent_snackbar_message">Snackbar message</string>
    <string name="created_new_project">Created new project</string>


</resources>
