<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountSettingsActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="Account Settings"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.06" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/ic_launcher_background" />

    <EditText
        android:id="@+id/etasName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/etasPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/phone_hint"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/etasName"
        app:layout_constraintStart_toStartOf="@+id/etasName"
        app:layout_constraintTop_toBottomOf="@+id/etasName" />

    <EditText
        android:id="@+id/etasEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="@+id/etasPhone"
        app:layout_constraintStart_toStartOf="@+id/etasPhone"
        app:layout_constraintTop_toBottomOf="@+id/etasPhone" />

    <Button
        android:id="@+id/btnasSave"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="@+id/etasEmail"
        app:layout_constraintStart_toStartOf="@+id/etasEmail"
        app:layout_constraintTop_toBottomOf="@+id/etasEmail" />

    <TextView
        android:id="@+id/tvasChangePassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Change Password"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="@+id/btnasSave"
        app:layout_constraintStart_toStartOf="@+id/btnasSave"
        app:layout_constraintTop_toBottomOf="@+id/btnasSave" />
</androidx.constraintlayout.widget.ConstraintLayout>