<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    tools:context=".issues.NewIssueActivity">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Issue Type:"
        android:textAlignment="textEnd"
        android:textColor="@color/colorBlack"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_issue_type"
        app:layout_constraintEnd_toStartOf="@+id/spinner_issue_type"
        app:layout_constraintStart_toStartOf="@+id/actv_assign_to_project"
        app:layout_constraintTop_toTopOf="@+id/spinner_issue_type" />

    <AutoCompleteTextView
        android:id="@+id/actv_assign_to_project"
        style="@android:style/Widget.DeviceDefault.AutoCompleteTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/assign_to_project_hint"
        android:popupBackground="@color/common_google_signin_btn_text_light_pressed"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_issue_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/actv_assign_to_project"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/actv_assign_to_project" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/spinner_issue_type"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/spinner_issue_type">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/summary_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout3"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_issue_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Priority:"
        android:textColor="@color/colorBlack"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_priority"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout4"
        app:layout_constraintTop_toTopOf="@+id/spinner_priority" />

    <Spinner
        android:id="@+id/spinner_priority"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout4"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />

    <ProgressBar
        android:id="@+id/progress_bar_ni"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>