<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".issues.IssueDetailActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_id_assign_to_project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:hint="@string/assign_to_project_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Issue status:"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_id_issue_status"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout8"
        app:layout_constraintTop_toTopOf="@+id/spinner_id_issue_status" />

    <Spinner
        android:id="@+id/spinner_id_issue_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout8"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout8" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/spinner_id_issue_status"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView13">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_id_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/summary_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout9"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout9"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout9">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_id_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_id_add_attachment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Add atachment"
        android:textAlignment="viewStart"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout10"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout10"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout10" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Priority:"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_id_priority"
        app:layout_constraintStart_toStartOf="@+id/tv_id_add_attachment"
        app:layout_constraintTop_toTopOf="@+id/spinner_id_priority" />

    <Spinner
        android:id="@+id/spinner_id_priority"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_id_add_attachment"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/tv_id_add_attachment" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Issue type:"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_id_issue_type"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toTopOf="@+id/spinner_id_issue_type" />

    <Spinner
        android:id="@+id/spinner_id_issue_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/spinner_id_priority"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/spinner_id_priority" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Assignee:"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_id_assignee"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toTopOf="@+id/spinner_id_assignee" />

    <Spinner
        android:id="@+id/spinner_id_assignee"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/spinner_id_issue_type"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/spinner_id_issue_type" />

    <Button
        android:id="@+id/btn_id_save"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Save"
        app:layout_constraintEnd_toEndOf="@+id/spinner_id_assignee"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/spinner_id_assignee" />

    <ProgressBar
        android:id="@+id/progress_bar_id"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>